--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 span{
     display: block;
 }
+.form-container{
+    display: flex;
+    background-color: aqua;
+}
+
+body{
+    background-color: aqua;
+}
