--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,8 @@ input{
     border: 0;
     outline-width: 0;
 }
+th,td{
+    border: 0;
+    border-bottom: 1px solid grey;
+    background-color: rgba(255,255,255,0.4) !important;
+}
