--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,16 @@ body{
 input{
     border: 0;
     outline-width: 0;
+    text-align: center;
 }
 th,td{
     border: 0;
     border-bottom: 1px solid grey;
     background-color: rgba(255,255,255,0.4) !important;
+}
+.container{
+    background-color: white;    
+    padding: 10px;
+    border-radius: 20px;
+    text-align: center;
 }
